fixed 3 cropped pic about

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ header {
     width: 200px;
     display: inline-block;
     margin: 0 auto;   
+    filter: contrast(2);
 }
 
 .header__title {
@@ -76,6 +77,7 @@ header {
 .header__nav {
     margin: 20px auto;
 }
+
 ul { 
     list-style: none;
     margin: 0 20px 0 auto;
@@ -115,7 +117,7 @@ a:hover {
     align-items: center;
 }
 
-.intro__title {
+h1 {
     text-rendering: optimizeLegibility;
     margin: 0 auto;
     font-weight: 900;
@@ -153,7 +155,7 @@ a:hover {
     max-width: 1280px;
 }
 
-.about__title {
+h2 {
     text-rendering: optimizeLegibility;
     margin: 20px auto;
     font-weight: 700;
@@ -164,13 +166,28 @@ a:hover {
 }
 
 .about__parag {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    margin: 10px auto;
 }
 
+.about__items {
+    max-width: 100%;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+    column-gap: 40px;
+    margin: 20px auto;  
+    justify-items: center;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.about__item {
+    display: flex;
+    flex-direction: column;
+    max-width: 230px;
+}
 .about__img {
-    max-width: 300px;
+    max-width: 150px;
 }
 
 .about__text {
